# yapt-package

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  README.md  pyproject.toml
src/: changelog.rs  errors.rs  git.rs  main.rs  notice.rs  package.rs  parameters.rs  publish.rs  tests.rs  upload.py
tests/: .gitignore
tests/fixtures/: CHANGELOG.md  LICENSE  pyproject.toml
tests/fixtures/my_plugin/: metadata.txt
