[package]
name = "yapt-pkg"
version = "0.1.0"
edition = "2024"
authors = ["David Marteau <david.marteau@3liz.com>"]
keywords = ["ci", "qgis", "plugins", "packaging"]
licence = "MIT OR Apache-2.0" 

[dependencies]
log = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
# See https://github.com/zonyitoo/rust-ini/pull/152
#rust-ini = "0.21"
rust-ini = { git = "https://github.com/dmarteau/rust-ini.git", branch="multiline-write-support" }
glob = "0.3"
semver = "1"
zip = { version = "7", default-features = false, features = ["deflate"] }
url = { version = "2.5", features = ["serde"] }
toml = { version = "0.9", features = ["serde"] }
time = { version = "0.3", features = ["formatting"] }
env_logger = "0.11"
nom = "8"
tempfile = "3"
slug = "0.1"

[profile.release]
strip = "debuginfo"
